--- a/gradle.properties
+++ b/gradle.properties
@@ -47,3 +47,6 @@ mod_group_id=com.flyn
 mod_authors=Flyn
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=
+
+# The JEI verison
+jei_version=15.0.0.17
